# msu_ros

./: CMakeLists.txt  README.md  package.xml
assets/: cameras.xml
assets/door/: mjdoor.xml
assets/kinova_j2s6s300/: mj-j2s6s300.xml  mj-j2s6s300_door.xml  ros-j2s6s300-actuator-reduction.xml  ros-j2s6s300-no-actuator-tags.xml
data/: gpd_grasps  gpd_grasps_handle_only  gpd_grasps_latest  quats_latest  xyz_latest  xyz_saved_weirdly
launch/: cameras.launch  dev_kuka_cam.launch  gazebo_test.launch  minimal.launch  moveit_integration.launch
src/: kdl_test.cpp
src/kinova_j2s6s300/: mj-j2s6s300.xml
src/scripts/: camera_info.py  depth_sub_test.py  foo.txt  geometry_msgs.msg  gpd_listener.py  grasps_to_poses.py  joint_angles_200  joint_angles_latest  kdl_test.py  moveit_msgs.msg  moveit_test.py  msu_ros_test.py  outie  outie_handle  quats_to_poses.py
