<?xml version="1.0"?>
<package format="2">
  <name>msu_ros</name>
  <version>0.0.0</version>
  <description>The msu_ros package</description>
  <maintainer email="abba@brown.edu">abba</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>

  <exec_depend>kdl_parser</exec_depend>
  <exec_depend>orocos_kdl</exec_depend>
</package>
